--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,16 @@
 Package: FunciSNP
 Type: Package
-Title: Integrating Functional Non-coding Datasets with Genetic
-        Association Studies to Identify Candidate Regulatory SNPs
+Title: Integrating Functional Non-coding Datasets with Genetic Association Studies to Identify Candidate Regulatory SNPs
 Version: 0.99.0
 Date: 2012-05-18
 Author: Simon G. Coetzee <simon@simoncoetzee.com> and Houtan Noushmehr, PhD <houtan@usp.br>
 Maintainer: Simon G. Coetzee <simon@simoncoetzee.com>
-biocViews: Infrastructure, DataRepresentation, DataImport,
-        SequenceMatching, Annotation
-Depends: R (>= 2.14.0), ggplot2, TxDb.Hsapiens.UCSC.hg19.knownGene,
-        FunciSNP.data
-Imports: AnnotationDbi, IRanges, Rsamtools (>= 1.6.1), rtracklayer(>=
-        1.14.1), methods, ChIPpeakAnno (>= 2.2.0), GenomicRanges,
-        VariantAnnotation, plyr, org.Hs.eg.db, snpStats, ggplot2 (>=
-        0.9.0), reshape (>= 0.8.4), scales
+biocViews: Infrastructure, DataRepresentation, DataImport, SequenceMatching, Annotation
+Depends: R (>= 2.14.0), ggplot2, TxDb.Hsapiens.UCSC.hg19.knownGene, FunciSNP.data
+Imports: AnnotationDbi, IRanges, Rsamtools (>= 1.6.1), rtracklayer(>= 1.14.1), methods, ChIPpeakAnno (>= 2.2.0), GenomicRanges, VariantAnnotation, plyr, org.Hs.eg.db, snpStats, ggplot2 (>= 0.9.0), reshape (>= 0.8.4), scales
 Enhances: parallel
 Description: FunciSNP integrates information from GWAS, 1000genomes and chromatin feature to identify functional SNP in coding or non-coding regions. 
 License: GPL-3
 URL: http://coetzeeseq.usc.edu/publication/Coetzee_SG_et_al_2012/
 LazyData: yes
-Packaged: 2012-05-31 04:42:23 UTC; houtan
+Packaged: 2012-05-18 10:29:59 UTC
