--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: FunciSNP
 Type: Package
 Title: Integrating Functional Non-coding Datasets with Genetic Association Studies to Identify Candidate Regulatory SNPs
-Version: 1.13.0
+Version: 1.13.1
 Date: 2013-01-19
 Author: Simon G. Coetzee <simon@simoncoetzee.com> and Houtan Noushmehr, PhD <houtan@usp.br>
 Maintainer: Simon G. Coetzee <simon@simoncoetzee.com>
 biocViews: Infrastructure, DataRepresentation, DataImport, SequenceMatching, Annotation
 Depends: R (>= 2.14.0), ggplot2, TxDb.Hsapiens.UCSC.hg19.knownGene, FunciSNP.data
-Imports: AnnotationDbi, IRanges, Rsamtools (>= 1.6.1), rtracklayer(>= 1.14.1), methods, ChIPpeakAnno (>= 2.2.0), GenomicRanges, VariantAnnotation, plyr, org.Hs.eg.db, snpStats, ggplot2 (>= 0.9.0), reshape (>= 0.8.4), scales
+Imports: methods, BiocGenerics, Biobase, S4Vectors, IRanges, GenomicRanges, Rsamtools (>= 1.6.1), rtracklayer (>= 1.14.1), ChIPpeakAnno (>= 2.2.0), VariantAnnotation, plyr, snpStats, ggplot2 (>= 0.9.0), reshape (>= 0.8.4), scales
+Suggests: org.Hs.eg.db
 Enhances: parallel
 Description: FunciSNP integrates information from GWAS, 1000genomes and chromatin feature to identify functional SNP in coding or non-coding regions. 
 License: GPL-3
